# cryptopricedata

./: .env.example  .gitignore  Cargo.toml  README.md
.kilo/plans/: 1780645365199-misty-nebula.md  1782282880117-ods-8-decimal-places.md  1782308257632-date-time-cell-types.md  externalize-api-keys.md  switch-apis-1-3-to-coingecko.md
src/: main.rs
