[package]
name = "crypto_price"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
spreadsheet-ods = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"